fix homepage background on mobile

--- a/static/css/_breakpoint-medium.scss
+++ b/static/css/_breakpoint-medium.scss
@@ -1,3 +1,7 @@
+div#isMobile {
+	display: none;
+}
+
 h2 {
 	font-size: 2.8em;
 }
